--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -2200,7 +2200,7 @@ transition: transform .8s cubic-bezier(.5,.2,.2,.8),-webkit-transform .8s cubic-
 /* list Style 02 */
 .list-style-02 {list-style: none; margin: 0; padding: 0;}
 .list-style-02 li {position: relative;margin: 0 0 9px 0;}
-.list-style-02 li:before {content:"\efad";font-family: icofont;margin-right: 10px;color:#f857a6;}
+.list-style-02 li:before {content:url("../images/bulletPoints.svg");font-family: icofont;margin-right: 10px;color:#f857a6; vertical-align: middle;}
 
 /* list Style 03 */
 .list-style-03 { list-style: none; margin: 0; padding: 0;}
@@ -2808,9 +2808,9 @@ background: -ms-linear-gradient(left, #f857a6 0%,#ff5858 100%);background: -o-li
 .slider-creative{width: 100%;height: 100%;position: absolute;right: 0;left: 0;}
 
 /* Custom Images */
-.img-center{background-repeat: no-repeat;background-size: cover;background-position: center center;width: 100%;height: 803px;}
-.img-left, .img-right{background-repeat: no-repeat;background-size: cover;background-position: center center;width: 100%;height: 700px;}
-
+.img-center{background-repeat: no-repeat;background-size: cover;background-position: center center;width: 100%;height: 864px;}
+.img-left{background-repeat: no-repeat;background-size: cover;background-position: center center;width: 100%;height: 700px;}
+.img-right{background-repeat: no-repeat;background-size: cover;background-position: center center;width: 100%;height: 843px;}
 /* Demos */
 
 
@@ -2904,6 +2904,10 @@ border-radius: 3px;height: 10px;width: -webkit-calc(100% - 50px);width: calc(100
    list-style: none;
 }
 
+.flex-box-center {
+   display: flex;
+   justify-content: center;
+}
 
 @media(min-width: 992px) and (max-width: 1200px) {
 .vid_prd_serv_parent {
@@ -2953,6 +2957,9 @@ border-radius: 3px;height: 10px;width: -webkit-calc(100% - 50px);width: calc(100
       padding: 0 65px !important;
       width: 100%;
       margin: 0px;
+   }
+   .flex-box-center {
+      flex-direction: column;
    }
 }
 
@@ -3021,5 +3028,9 @@ section {
 [class^='imghvr-'] figcaption, [class*=' imghvr-'] figcaption {
    padding: 0px;
 }
+.flex-box-center {
+   flex-direction: column;
 }
+}
+
 
