ui changes done

--- a/assets/css/bootsnav.css
+++ b/assets/css/bootsnav.css
@@ -838,6 +838,7 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked {
     nav.navbar.bootsnav.navbar-fixed .logo-display {
         opacity: 0;
         height: 0;
+        margin-top: 5px;
     }
 
     nav.navbar.bootsnav.navbar-fixed .logo-scrolled {
