--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1014,7 +1014,7 @@ box-shadow: 0px 0px 51px 0px rgba(0, 0, 0, 0.08), 0px 6px 18px 0px rgba(0, 0, 0,
 .btn.btn-fullwidth {width:100%;min-width:300px;}
 .btn.disabled, .btn[disabled], fieldset[disabled] .btn {opacity: 1;}
 .btn-color {color: #fff;background-color: #0A4177;}
-.btn-color:hover, .btn-color:active, .btn-color:focus {background-color: #ff5858;color: #fff;}
+.btn-color:hover, .btn-color:active, .btn-color:focus {background-color: #f6b229;color: #fff;}
 .btn-gradient{color: #fff;background-size: 300% 100%;moz-transition: all .4s ease-in-out;-o-transition: all .4s ease-in-out;-webkit-transition: all .4s ease-in-out;transition: all .4s ease-in-out;}
 .btn-gradient:hover{background-position: 100% 0;moz-transition: all .4s ease-in-out;-o-transition: all .4s ease-in-out;-webkit-transition: all .4s ease-in-out;transition: all .4s ease-in-out;}
 .btn-gradient.color-1 {background-image: linear-gradient(to right, #f857a6, #ff5858, #ff5858, #f857a6);}
@@ -2809,7 +2809,7 @@ background: -ms-linear-gradient(left, #f857a6 0%,#ff5858 100%);background: -o-li
 
 /* Custom Images */
 .img-center{background-repeat: no-repeat;background-size: cover;background-position: center center;width: 100%;height: 864px;}
-.img-left{background-repeat: no-repeat;background-size: cover;background-position: center center;width: 100%;height: 700px;}
+.img-left{background-repeat: no-repeat;background-size: cover;background-position: center center;width: 100%;height: 846px;}
 .img-right{background-repeat: no-repeat;background-size: cover;background-position: center center;width: 100%;height: 843px;}
 /* Demos */
 
