--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1516,10 +1516,10 @@
     display: none;
   }
   .testimonial-item .testimonial-content {
-    padding: 100px 50px 50px;
+    /* padding: 100px 50px 50px; */
   }
   .testimonial-style-3 .testimonial-item .testimonial-content {
-    padding: 0px 50px 0px;
+    /* padding: 0px 50px 0px; */
   }
   .testimonial-item {
     padding-left: 15px;
@@ -2546,7 +2546,7 @@
     display: none;
   }
   .testimonial-item .testimonial-content {
-    padding: 50px 50px 40px;
+    /* padding: 50px 50px 40px; */
     margin: 20px auto;
   }
   .col-inner.spacer-xl {
